Fixed patch target to be more specific

--- a/lovely/calculate_card_added.toml
+++ b/lovely/calculate_card_added.toml
@@ -7,7 +7,20 @@ priority = -5
 [[patches]]
 [patches.pattern]
 target = "card.lua"
-pattern = '''if G.GAME.blind and G.GAME.blind.in_blind and not self.from_quantum then G.E_MANAGER:add_event(Event({ func = function() G.GAME.blind:set_blind(nil, true, nil); return true end })) end'''
+pattern = '''if true then
+    if from_debuff then
+        self.ability.joker_added_to_deck_but_debuffed = nil
+    else
+        if self.edition and self.edition.card_limit then
+            if self.ability.consumeable then
+                G.consumeables.config.card_limit = G.consumeables.config.card_limit + self.edition.card_limit
+            else
+                G.jokers.config.card_limit = G.jokers.config.card_limit + self.edition.card_limit
+            end
+        end
+    end
+end
+if G.GAME.blind and G.GAME.blind.in_blind and not self.from_quantum then G.E_MANAGER:add_event(Event({ func = function() G.GAME.blind:set_blind(nil, true, nil); return true end })) end'''
 position = "after"
 match_indent = true
 payload = '''
