--- a/lovely/perma_bonus.toml
+++ b/lovely/perma_bonus.toml
@@ -221,7 +221,7 @@ position = "at"
 match_indent = true
 payload = '''local ret = (not self.ability.extra_enhancement and self.ability.perma_mult) or 0
 if self.ability.effect == "Lucky Card" then
-    if SMODS.pseudorandom_probability(self, 'lucky_mult', 1, 5) then
+    if SMODS.pseudorandom_probability(self, 1, 5, 'lucky_mult') then
         self.lucky_trigger = true
         ret = ret + self.ability.mult
     end
