--- a/lovely/playing_card.toml
+++ b/lovely/playing_card.toml
@@ -119,7 +119,7 @@ match_indent = true
 target = "functions/misc_functions.lua"
 pattern = "local four_fingers = next(find_joker('Four Fingers'))"
 position = 'at'
-payload = "local four_fingers = SMODS.four_fingers()"
+payload = "local four_fingers = SMODS.four_fingers('flush')"
 match_indent = true
 
 [[patches]]
